manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-contributor-list
  namespace: starlight-contributor-list
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-contributor-list
  ports:
    - name: http
      port: 80
